2010-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Change for 3.1.0

2010-03-23  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/ampgsql.pl: handle empty incrementals, wait for WAL
	  files to be archived during full backup, don't backup postmaster.pid
	  or pg_xlog
	* man/xml-source/ampgsql.8.xml: new property, fix typos, add a section
	  describing the operation
	* installcheck/ampgsql.pl: test restores more carefully, including
	  an empty incremental

2010-03-22 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc13  NOTEST

2010-03-22 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc12  NOTEST

2010-03-22  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amfeatures.c common-src/amfeatures.h
	  perl/Amanda/Feature.pod: add a new feature to indicate that
	  amrecover quotes disks right: fe_amrecover_correct_disk_quoting
	* common-src/match.c common-src/amanda.h: add an 'anchor' arg to
	  clean_regex
	* oldrecover-src/extract_list.c oldrecover-src/set_commands.c
	  recover-src/extract_list.c recover-src/set_commands.c
	  server-src/diskfile.c: use it
	* server-src/amidxtaped.pl: ignore DISK if it's not quoted correctly
	* installcheck/amidxtaped.pl: test that

2010-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amxml.c: data_path default ot DATA_PATH_AMANDA.

2010-03-19 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc11.  NOTEST

2010-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c: Do add_config_override before loading the
				   config.

2010-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Continue flush on new tape if holdingdisk is
			       full.

2010-03-18  Paul C. Mantz <pcmantz@zmanda.com>
	* perl/Amanda/Report.pm: updated POD

2010-03-18 Dan Locks <dwlocks@zmanda.com>
	*  configure.in: update to rc10.  NOTEST

2010-03-18  Dustin J. Mitchell <dustin@zmanda.com>